[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/objects/data consumer/platformIndustrial_031.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/DataConsumer.gd" type="Script" id=2]
[ext_resource path="res://src/Utils/ToggleController.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="DataConsumer" type="StaticBody2D" groups=["Switches"]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="ToggleController" parent="." instance=ExtResource( 3 )]

[node name="DataConsumer" type="Sprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 1.14286, 1.14286 )
texture = ExtResource( 1 )

[node name="ColourIndicator" type="ColorRect" parent="DataConsumer"]
anchor_left = 0.25
anchor_top = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
margin_left = -38.5
margin_top = -38.5
margin_right = -31.5
margin_bottom = -24.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -40 )
shape = SubResource( 1 )

[node name="CorruptedDataTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="CorruptedDataTimer" to="." method="_on_CorruptedDataTimer_timeout"]
